# grandchallenges_vesuvius

./: .gitignore  README.md  many_jobs.sh  pyproject.toml  start_training.sh  training_script.sh
configs/: segment_ids.yaml
ml/: __init__.py  inklabel_dataset.py  metrics.py
models/: AEA_lightning.py  CNNAE.py  DDpy_cond.py  __init__.py  condDDPM.py  condUNet.py  ddpm_lt_wrapped.py
notebooks/: AEA_lightning.py  conditional_ddpm_with_ae.ipynb  dataset_tests.ipynb  example2_ink_detection.ipynb  getting_started.ipynb  ink_labels.ipynb  segment_encoder_test.ipynb  training_AEA_test.ipynb  training_ddpm_test.ipynb  training_ink_lable_ddpm.ipynb  training_script_slurm.py
paper/: bibliography.bib  main.tex  präsi.tex
src/: AAE_train.py
src/experiments/: dataset_extraction.ipynb  pos_conv_example.ipynb  viz.ipynb
